# allinsafe-vpn

./: README.md  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG.yml  Deploy.yml  Refactor.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/allinsafevpn/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/vpnclientapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ca-cert.pem
app/src/main/cpp/: charon-bridge.c  charon_bridge.c
app/src/main/java/com/allinsafevpn/: MainActivity.kt  NativeVpnBridge.kt
app/src/main/java/com/vpnclientapp/: MainActivity.kt  MyVpnService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/allinsafevpn/: ExampleUnitTest.kt
app/src/test/java/com/vpnclientapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk
